--- a/options.html
+++ b/options.html
@@ -3,19 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Extension Settings</title>
+    <title>__MSG_extName__ - __MSG_settings__</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="settings-container">
-        <h1>Settings</h1>
+        <h1>__MSG_settings__</h1>
         <div class="option">
             <input type="checkbox" id="toggleWordCount" class="custom-checkbox">
-            <label for="toggleWordCount">Enable Word Count</label>
+            <label for="toggleWordCount">__MSG_showWordCount__</label>
         </div>
         <div class="option">
             <input type="checkbox" id="toggleCharCount" class="custom-checkbox">
-            <label for="toggleCharCount">Enable Character Count</label>
+            <label for="toggleCharCount">__MSG_showCharCount__</label>
+        </div>
+        <div class="option">
+            <label for="darkMode" class="switch">
+                <input type="checkbox" id="darkMode">
+                <span class="slider"></span>
+            </label>
+            <label for="darkMode">__MSG_darkMode__</label>
         </div>
     </div>
     <script src="options.js"></script>
